<resources>
    <string name="app_name">ThoughtspoTT</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_thoughtspott">Welcome to ThoughtSpott</string>
    <string name="email">Name</string>
    <string name="editTextEmail">Email Address</string>
    <string name="editTextPassword">Password</string>
    <string name="button_login">Login</string>
    <string name="text_view_not_registered">Not Registered?</string>
    <string name="button_register">Log In</string>
    <string name="textRegistrationTitle">Register</string>
    <string name="TextTextEmailAddress">Email Address</string>
    <string name="edit_text_text_password2">Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_homepage">Homepage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_forum">Forum</string>
    <string name="title_activity_tabbed_profile">tabbed_profile</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Classes</string>
    <string name="tab_text_3">Bio</string>
    <string name="write_a_message">Write a message</string>
    <string name="todo">TODO</string>
    <string name="testing">Testing</string>
    <string name="chemistry_at_5_pm">Chemistry at 5 PM</string>
    <string name="physics_at_2_pm_study_for_midterm">Physics_at_2_pm_:_study_for_midterm</string>
    <string name="chemistry_at_5_pm_homework_2">chemistry_at_5_pm_:_Homework_2</string>
    <string name="physics_2pm_study_for_midterm_chemistry_5pm_homework_2">Physics 2PM: Study for midterm/Chemistry 5PM: Homework 2</string>
    <string name="title_activity_joinable_sessions_list">JoinableSessionsList</string>
</resources>